// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders 1`] = `
<div
  class="betweenBottomMarginDesktop-2 stack"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      data-no-global-styles="true"
      for="the-input"
    >
      <span
        class="betweenRightMarginDesktop-2 inline alignCenter"
      >
        <span
          class="medium boldFont color"
        >
          The input
        </span>
      </span>
    </label>
  </div>
  <div
    class="relative"
  >
    <input
      aria-invalid="false"
      class="default height hideNumberSpinner"
      data-no-global-styles="true"
      id="the-input"
      type="text"
      value=""
    />
    <div
      class="iconsPosition"
    />
  </div>
</div>
`;

exports[`Input renders with a feedback state and icon 1`] = `
<div
  class="betweenBottomMarginDesktop-2 stack"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      data-no-global-styles="true"
      for="the-input"
    >
      <span
        class="betweenRightMarginDesktop-2 inline alignCenter"
      >
        <span
          class="medium boldFont color"
        >
          The input
        </span>
      </span>
    </label>
  </div>
  <div
    class="relative"
  >
    <input
      aria-invalid="true"
      class="error height hideNumberSpinner"
      data-no-global-styles="true"
      id="the-input"
      style="padding-right:calc(16px + 2rem)"
      type="text"
      value=""
    />
    <div
      class="iconsPosition"
    >
      <div
        style="transition:opacity 100ms ease-in-out;opacity:1"
      >
        <div
          class="fixLineHeight"
        >
          <i
            aria-label="The value of this input field is invalid."
            class="iconExclamationPointCircle error size16"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
